force-app/main/default/objects/Bill_To__c/Bill_To__c.object-meta.xml
<CustomObject>
    <label>Bill To</label>
    <nameField>
        <label>Bill To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill To&#39;s</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>