force-app/main/default/objects/Bill_To__c/fields/Commercial_Account__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill To&#39;s</relationshipLabel>
    <relationshipName>Bill_To_s1</relationshipName>
    <type>Lookup</type>
</CustomField>