force-app/main/default/objects/Bill_To__c/fields/Competitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Type__c</fullName>
    <label>Competitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Distributor Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>