force-app/main/default/objects/Bill_To__c/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <label>Default Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>MXP</fullName>
            </value>
            <value>
                <fullName>COP</fullName>
            </value>
            <value>
                <fullName>HNL</fullName>
            </value>
            <value>
                <fullName>GTQ</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>NIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>