force-app/main/default/objects/Bill_To__c/fields/Default_Inco_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Inco_Terms__c</fullName>
    <label>Default Inco Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>