force-app/main/default/objects/Bill_To__c/fields/Default_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Terms__c</fullName>
    <label>Default Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>