force-app/main/default/objects/Bill_To__c/fields/DEFAULT_PAYMENT_TERMS_Desc__c.field-meta.xml
<CustomField>
    <fullName>DEFAULT_PAYMENT_TERMS_Desc__c</fullName>
    <label>DEFAULT PAYMENT TERMS Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>