force-app/main/default/objects/Bill_To__c/fields/ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Number__c</fullName>
    <externalId>true</externalId>
    <label>ERP Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>