force-app/main/default/objects/Bill_To__c/fields/Legacy_Market_Channel__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Market_Channel__c</fullName>
    <label>Legacy Market Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>