force-app/main/default/objects/Bill_To__c/fields/Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System__c</fullName>
    <label>Legacy System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XLGO</fullName>
            </value>
            <value>
                <fullName>XLDM</fullName>
            </value>
            <value>
                <fullName>CBS</fullName>
            </value>
            <value>
                <fullName>CTCM</fullName>
            </value>
            <value>
                <fullName>PROTEAN</fullName>
            </value>
            <value>
                <fullName>CVAP EGG</fullName>
            </value>
            <value>
                <fullName>FIVE STAR</fullName>
            </value>
            <value>
                <fullName>CFD</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>JDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>