force-app/main/default/objects/Bill_To__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill To&#39;s</relationshipLabel>
    <relationshipName>Bill_To_s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>