force-app/main/default/objects/Bill_To__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Account</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Strategic Few</fullName>
            </value>
            <value>
                <fullName>Critical Core</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>