force-app/main/default/objects/Bill_To__c/fields/Source_Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>Source_Parent_Customer__c</fullName>
    <label>Source Parent Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>