force-app/main/default/objects/Bill_To__c/fields/Source_Parent_Customer_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Parent_Customer_Description__c</fullName>
    <label>Source Parent Customer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>