force-app/main/default/objects/Bill_To__c/fields/Source_Payer__c.field-meta.xml
<CustomField>
    <fullName>Source_Payer__c</fullName>
    <label>Source Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>