force-app/main/default/objects/Bill_To__c/fields/Source_Payer_Desrciption__c.field-meta.xml
<CustomField>
    <fullName>Source_Payer_Desrciption__c</fullName>
    <label>Source Payer Desrciption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>